# axiom

./: .gitignore  CLAUDE.md  Cargo.toml  DEMOS.md  MASTER_PLAN.md  README.md  b.bat  build.bat  build.ps1  build.rs  build2.txt  build_and_log.bat  build_full.bat  demo.py  demo.sh  demo_campaign.py  demo_client.py  demo_examples.py  demo_export.py  demo_fighting.py  demo_perf.py  demo_replay.py  demo_rts.py  demo_templates.py  demo_topdown.py  k.bat  load_topdown.py  r.bat  run.bat
.github/workflows/: ci.yml  export-smoke.yml  perf-long-horizon.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COOKBOOK.md
src/: ai.rs  animation.rs  audio.rs  camera.rs  components.rs  constraints.rs  cutscene.rs  debug.rs  events.rs  feel.rs  file_watcher.rs  game_runtime.rs  generation.rs  input.rs  interaction.rs  inventory.rs  lighting.rs  main.rs  parallax.rs  particles.rs  pathfinding.rs  perf.rs  physics.rs  physics_core.rs  player.rs  raycast.rs  render.rs  screen_effects.rs  simulation.rs  spatial_hash.rs  spawn.rs  sprites.rs  state_machine.rs  telemetry.rs  tilemap.rs  trail.rs  tween.rs  ui.rs  weather.rs  web_bootstrap.rs  (+1 more)
src/api/: command_runtime.rs  command_runtime_helpers.rs  commands.rs  docs.rs  helpers.rs  mod.rs  persistence.rs  router.rs  routes_campaign.rs  routes_core.rs  routes_entities.rs  routes_exports.rs  routes_gameplay.rs  routes_generation.rs  routes_misc.rs  security.rs  state.rs  types.rs
tools/: autotile_atlas_stitcher.py  perf_long_horizon.py  perf_thresholds.example.json  sprite_analyze.py  template_seed_scout.py  web_export_runtime_smoke.py
(+8 files in other folders)
