[package]
name = "axiom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["default_font"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
