[package]
name = "axiom"
version = "0.1.0"
edition = "2021"

[features]
default = []
web_export = []
desktop_export = []

[dependencies]
bevy = { version = "0.15", features = ["default_font", "webgl2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
rhai = "1.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored", "serialize"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
async-stream = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tower = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
